@@ -14,7 +14,7 @@ package org.openhab.binding.airvisualnode.internal.discovery;
 
 import java.io.IOException;
 import java.net.UnknownHostException;
-import java.util.Collections;
+import java.util.Set;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
 import java.util.regex.Matcher;
@@ -55,7 +55,7 @@ public class AirVisualNodeDiscoveryService extends AbstractDiscoveryService {
     private @Nullable ScheduledFuture<?> backgroundDiscoveryFuture;
 
     public AirVisualNodeDiscoveryService() {
-        super(Collections.singleton(AirVisualNodeBindingConstants.THING_TYPE_AVNODE), 600, true);
+        super(Set.of(AirVisualNodeBindingConstants.THING_TYPE_AVNODE), 600, true);
     }
 
     @Override
